<resources>
    <string name="app_name">ChinchonKotlin</string>
    <string name="title_activity_acomodar">AcomodarActivity</string>
    <string name="title_activity_cambio_turno">CambioTurnoActivity</string>
    <string name="title_activity_ganador">GanadorActivity</string>
    <string name="title_activity_partida">PartidaActivity</string>
    <string name="title_activity_registro_jugadores">RegistroJugadoresActivity</string>

    <string name="nombre_jugador_1">Jugador 1</string>
    <string name="nombre_jugador_2">Jugador 2</string>

    <string name="ac_acomodado">¡Juego formado!</string>
    <string name="ac_corte">Vos cortaste</string>
    <string name="ac_Cancelar">Cancelar</string>
    <string name="ac_Desarmar">Desarmar</string>
    <string name="ac_Emparejar">Emparejar</string>
    <string name="ac_Finalizar">Finalizar</string>
    <string name="ac_noacomodado">¡No forman un juego!</string>
    <string name="ac_nombre">Jugador: %1$s: %2$d puntos.</string>
    <string name="ac_sumapuntos">Sumás %d, pasás a tener %d puntos.</string>
    <string name="ac_restapuntos">Restás 10, pasás a tener %d puntos.</string>

    <string name="ay_titulo">Cómo jugar</string>
    <string name="ay_cambioturno">
        &#8226; Cuando se alterna entre los turnos de los jugadores se tapa la
        pantalla del juego, para que ninguno de los jugadores vea las cartas
        del otro en el traspaso.
    </string>
    <string name="ay_cortar">
        &#8226; Para cortar hay que arrastrar la carta con la que se quiere
        cortar al botón "Cortar".
    </string>
    <string name="ay_juego">
        &#8226; Juegan los dos jugadores utilizando el mismo dispositivo. El
        primer jugador juega con su mano arriba del mazo y de la pila y el
        segundo abajo. Ambos jugadores se alternan para manejar sus cartas.
    </string>
    <string name="ay_mano">
        &#8226; Para mover las cartas en la mano hay que arrastrarlas entre si.
    </string>
    <string name="ay_mazo">
        &#8226; Para robar del mazo, hay que apretar el monte de la izquierda.
        Para robar de la pila hay que apretar el monte de la derecha.
    </string>
    <string name="ay_pila">
        &#8226; Para tirar una carta a la pila para terminar el turno hay que
        arrastrar una carta de la mano al monte de la derecha.
    </string>
    <string name="ay_volver">Volver</string>

    <string name="ct_turno_de">Turno de %1$s</string>

    <string name="g_chinchon">con %1$d puntos y haciendo CHINCHÓN</string>
    <string name="g_contra">Contra: %1$s</string>
    <string name="g_empate">¡Empate! Felicitaciones a ambos.</string>
    <string name="g_felicitaciones">¡Felicitaciones!</string>
    <string name="g_finalizar">Finalizar</string>
    <string name="g_ganador">Ganó: %1$s</string>
    <string name="g_jugador">Jugador: %1$s</string>
    <string name="g_puntos">con %1$d puntos</string>
    <string name="g_rondas">en %1$d rondas</string>

    <string name="main_ayuda">Ayuda</string>
    <string name="main_comenzar">Comenzar partida</string>
    <string name="main_info">Por Leonardo Marchetti</string>
    <string name="main_salir">Salir</string>
    <string name="main_titulo">Chinchon Kotlin</string>

    <string name="mj_cambioturno">Próximo turno</string>
    <string name="mj_cartapila">Pila</string>
    <string name="mj_malcorte">¡No se puede cortar así!</string>
    <string name="mj_puntos">%1$d puntos.</string>
    <string name="mj_atencion_pila">El jugador anterior robó de la pila</string>

    <string name="rj_continuar">Continuar</string>
    <string name="rj_hint1">Ingrese nombre y cantidad de puntos iniciales para cada jugador.</string>
    <string name="rj_hint2">Si un cuadro de puntos queda vacío, se toma como 0 puntos ingresados.</string>
    <string name="rj_hint3">El primer jugador ingresado es el que comienza.</string>
    <string name="rj_hintpuntos">0</string>
    <string name="rj_jugador1">Ingrese nombre de jugador 1</string>
    <string name="rj_jugador2">Ingrese nombre de jugador 2</string>

    <string name="carta">Carta</string>
    <string name="btn_cortar">Cortar</string>

</resources>
