<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Actividad" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mj_cartapila"
        style="@style/Texto" />

    <ImageView
        android:id="@+id/ct_carta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/carta"
        android:src="@drawable/vacio" />

    <TextView
        android:id="@+id/ct_turno_de"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ct_turno_de"
        style="@style/Texto" />

    <Button android:id="@+id/ct_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/mj_cambioturno"
        style="@style/Boton" />

</LinearLayout>