<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_mesajuego"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/g_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_felicitaciones"
            android:textSize="@dimen/g_normal_fontsize" />

        <TextView
            android:id="@+id/g_tv_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_ganador"
            android:textSize="@dimen/g_normal_fontsize" />

        <TextView
            android:id="@+id/g_tv_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_puntos"
            android:textSize="@dimen/g_normal_fontsize" />

        <TextView
            android:id="@+id/g_tv_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_contra"
            android:textSize="@dimen/g_normal_fontsize" />

        <TextView
            android:id="@+id/g_tv_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_puntos"
            android:textSize="@dimen/g_normal_fontsize" />

        <TextView
            android:id="@+id/g_tv_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_turnos"
            android:textSize="@dimen/g_normal_fontsize" />

    </LinearLayout>

    <Button
        android:id="@+id/g_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/g_finalizar"
        />

</RelativeLayout>