<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Actividad"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/main_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:gravity="center"
        android:text="@string/main_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Titulo" />

    <Button
        android:id="@+id/main_comenzar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:gravity="center"
        android:text="@string/main_comenzar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_titulo"
        style="@style/Boton" />

    <Button
        android:id="@+id/main_ayuda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:text="@string/main_ayuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_comenzar"
        style="@style/Boton" />

    <Button
        android:id="@+id/main_salir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:gravity="center"
        android:text="@string/main_salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Boton" />

    <TextView
        android:id="@+id/main_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="7dp"
        android:text="@string/main_info"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/main_salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Texto"/>

</androidx.constraintlayout.widget.ConstraintLayout>

