<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical">

    <!-- mj_mano_1 -->
    <TableLayout
        android:id="@+id/mj_mano_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <!-- mj_mano_1 tablerow1 -->
        <TableRow android:layout_weight="1">

            <ImageView
                android:id="@+id/mj_imgcarta_1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="1" />

            <ImageView
                android:id="@+id/mj_imgcarta_1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="2" />

            <ImageView
                android:id="@+id/mj_imgcarta_1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="3" />

            <ImageView
                android:id="@+id/mj_imgcarta_1_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="4" />

        </TableRow>

        <!-- mj_mano_1 tablerow2 -->
        <TableRow android:layout_weight="1">

            <ImageView
                android:id="@+id/mj_imgcarta_1_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="5" />

            <ImageView
                android:id="@+id/mj_imgcarta_1_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="6" />

            <ImageView
                android:id="@+id/mj_imgcarta_1_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="7" />

            <ImageView
                android:id="@+id/mj_imgcarta_1_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="8" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/mj_nombrejugador_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nombre_jugador_1"
        android:textColor="@color/texto"
        android:textSize="@dimen/mj_fontsize" />

    <TextView
        android:id="@+id/mj_puntos_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mj_puntos"
        android:textColor="@color/texto"
        android:textSize="@dimen/mj_fontsize" />


    <!-- mj_mazos -->
    <RelativeLayout
        android:id="@+id/mj_mazos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/mj_mazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/carta"
            android:src="@drawable/dorso" />

        <Button
            android:id="@+id/mj_cortar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/btn_cortar"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/mj_nombrecarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mj_cortar_btn"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text=""
            android:textColor="@color/texto"
            android:textSize="@dimen/mj_fontsize" />

        <ImageView
            android:id="@+id/mj_pila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/carta" />

    </RelativeLayout>

    <TextView
        android:id="@+id/mj_puntos_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mj_puntos"
        android:textColor="@color/texto"
        android:textSize="@dimen/mj_fontsize" />

    <TextView
        android:id="@+id/mj_nombrejugador_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nombre_jugador_2"
        android:textColor="@color/texto"
        android:textSize="@dimen/mj_fontsize" />

    <!-- mj_mano_2 -->
    <TableLayout
        android:id="@+id/mj_mano_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone">

        <!-- mj_mano_2 tablerow1 -->
        <TableRow android:layout_weight="1">

            <ImageView
                android:id="@+id/mj_imgcarta_2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="1" />

            <ImageView
                android:id="@+id/mj_imgcarta_2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="2" />

            <ImageView
                android:id="@+id/mj_imgcarta_2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="3" />

            <ImageView
                android:id="@+id/mj_imgcarta_2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="4" />

        </TableRow>

        <!-- mj_mano_2 tablerow2 -->
        <TableRow android:layout_weight="1">

            <ImageView
                android:id="@+id/mj_imgcarta_2_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="5" />

            <ImageView
                android:id="@+id/mj_imgcarta_2_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="6" />

            <ImageView
                android:id="@+id/mj_imgcarta_2_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="7" />

            <ImageView
                android:id="@+id/mj_imgcarta_2_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/carta"
                android:tag="8" />

        </TableRow>

    </TableLayout>

</LinearLayout>